--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/task_1.js" type="module"></script>
-    <script src="./js/task_2.js" type="module"></script>
-    <script src="./js/task_3.js" type="module"></script>
-    <script src="./js/task_4.js" type="module"></script>
+    <script src="./js/task-1.js" type="module"></script>
+    <script src="./js/task-2.js" type="module"></script>
+    <script src="./js/task-3.js" type="module"></script>
+    <script src="./js/task-4.js" type="module"></script>
   </body>
 </html>
